--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@ layout: default
 title: Home
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<div class="container text-center">
+	<h1><i class="fa fa-rocket fa-4x"></i><br />connectedAFRICA</h1>
+	<p class="lead">- Coming Soon -</p>
 </div>
